k8s/manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: wsfw
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: web
